--- a/css-file/style.css
+++ b/css-file/style.css
@@ -29,7 +29,8 @@ div a {
 }
 
 img {
-    width: 25%;
+    width: 30%;
+    border-radius: 10px;
 }
 
 .underheader-container {
@@ -38,7 +39,7 @@ img {
   gap: 50px; 
   background-color: #1F2937;
   align-items: center;
-  padding: 120px 0;
+  padding: 100px 0;
 }
 
 .website-title-container {
@@ -69,4 +70,31 @@ img {
     border: none;
     cursor: pointer;
     
+}
+
+.some-info-header {
+    font-size: 36px;
+    text-align: center;
+    font-weight: 900;
+    color: #1F2937; 
+    padding: 25px 0;
+}
+
+.images-and-text-container {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    text-align: center;
+}
+
+.info {
+    max-width: 150px; 
+    font-size: 18px;
+    color: rgb(101, 105, 104); 
+}
+
+.info img {
+width: 100%;
+max-height: 70%;
+border-radius: 10px;
 }
