--- a/css-file/style.css
+++ b/css-file/style.css
@@ -110,9 +110,10 @@ img {
 }
 
 .quote-and-signature-container {
-    max-width: 850px;
+    max-width: 800px;
     display: flex;
     flex-direction: column;
+    padding: 0 50px;
 }
 .quotation {
     font-size: 36px;
@@ -126,7 +127,6 @@ img {
     align-self: flex-end;
     margin-right: 50px;
     font-size: 24px;
-    
 }
 
 .action-outer-container {
