--- a/css-file/style.css
+++ b/css-file/style.css
@@ -135,7 +135,7 @@ img {
     justify-content: center;
     align-items: center;
     flex: 1;
-    padding: 100px 0;
+    padding: 100px 50px;
 }
 
 .action-main-container {
