Add top and bottom padding to action-main-cont
I also added flex-shrink 0 to the sign-up button container

--- a/css-file/style.css
+++ b/css-file/style.css
@@ -141,11 +141,11 @@ img {
 .action-main-container {
     background-color: #3882F6;
     border-radius: 8px;
-    height: 160px;
+    height: 100px;
     display: flex;
     align-items: center;
     gap: 170px;
-    padding: 0 140px;
+    padding: 30px 140px;
     
 }
 
@@ -165,6 +165,7 @@ img {
     height: 45px;
     display: flex;
     align-items: flex-end;
+    flex-shrink: 0;
 }
 
 .lowerbutton {
