--- a/css-file/style.css
+++ b/css-file/style.css
@@ -146,9 +146,13 @@ img {
     align-items: center;
     gap: 170px;
     padding: 30px 140px;
-    
 }
 
+.action-text-container {
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+}
 .call-to-action {
     font-weight: bold;
     font-size: 24px;
