--- a/css-file/style.css
+++ b/css-file/style.css
@@ -146,6 +146,7 @@ img {
     align-items: center;
     flex: 1 0 auto;
     justify-content: space-evenly;
+    gap: 10px;
     padding: 20px 15px;
     margin: 30px;
 }
